  * add rules.dh7.{xs,noxs}
  * fix not detecting arch-dep packages in refresh mode (-R)
  * Bump Standards-Version to 3.8.0 (both in dh-make-perl and generated
    packages)
  * replace a call to `date -R` with a call to Email::Date::Format's
    email_date function. Avoids a fork. Thanks to Stephen Gran.
    + Add libemail-date-format-perl to Depends.

 -- gregor herrmann <gregoa@debian.org>  Sun, 18 May 2008 16:12:47 +0200

dh-make-perl (0.45) unstable; urgency=low

  * Fix mangling of long description, which was broken in 0.44; thanks to
    Kevin Ryde for the bugreport (closes: #481560).
  * Tighten regexp when checking for empty long description, avoids spurious
    warnings.

 -- gregor herrmann <gregoa@debian.org>  Sat, 17 May 2008 15:09:59 +0200

dh-make-perl (0.44) unstable; urgency=low

  [ gregor herrmann ]
  * Fix check_for_xs(), thanks to Kevin Ryde for the bug report and the
    patch (closes: #480420).
  * Escape dot in exclude pattern, also reported by Kevin Ryde in the same
    bugreport.
  * CPAN.pm creates build directories with a random part since 1.88_59; use
    the new CPAN::Distribution::base_id method to get nice directory names
    again (introduced in 1.91_53), if our CPAN.pm is new enough.
  * Initialize $desc to avoid a warning.
  * Only mangle $longdesc if it is not empty, avoids results like " .".
  * If the directory containing the unpacked tarball already exists rename
    it instead of moving the contents beneath it.
  * Slightly improve wording when searching with apt-file.
  * Handle errors from moving directories.
  * Change my email address in several files.
  * debian/copyright: update years of contributions.

  [ Damyan Ivanov ]
  * Remove Roberto C. Sanchez from Uploaders on his request.

 -- gregor herrmann <gregoa@debian.org>  Sat, 10 May 2008 22:41:06 +0200

dh-make-perl (0.43) unstable; urgency=low

  [ gregor herrmann ]
  * Evaluate --arch command line option earlier.