@@ -1,13 +1,17 @@
 #!/usr/bin/make -f
 
-build:
+build: build-stamp
+build-stamp:
 	dh $@
+	touch $@
 
 clean:
 	dh $@
 
-install: build
+install: install-stamp
+install-stamp: build-stamp
 	dh $@
+	touch $@
 
 binary-arch:
 
